# GeoVec-VE

./: LICENSE  README.md
Algorithms/include/: buildIndex.hpp  indexNode.hpp  linestringRender.hpp  pointRender.hpp  polygonRender.hpp  topoJudge.hpp
Datasets/linestring/Railway/: Railway_1.dbf  Railway_1.shp  Railway_1.shx
Datasets/point/POI/: POI_0.shx  POI_10.shp  POI_10.shx  POI_2.dbf  POI_2.shp  POI_2.shx  POI_3.shp  POI_3.shx  POI_4.shx  POI_5.shp  POI_5.shx  POI_6.shp  POI_6.shx  POI_7.dbf  POI_7.shp  POI_7.shx  POI_8.dbf  POI_8.shp  POI_8.shx  POI_9.shp  POI_9.shx
Datasets/polygon/Building/: Building_0.shx  Building_1.shx
Environment-setups/docker/: Docker-setup.md  Dockerfile
Environment-setups/initialization/: Install-setup.md
Experiments/project/: CMakeLists.txt
Experiments/project/GeoSparkViz/: dependency-reduced-pom.xml  pom.xml
Experiments/project/GeoSparkViz/src/main/scala/com/geosparkviz/: GeoVecViz.scala
Experiments/project/plot-figure-full/: plot_exp1_fig10.py  plot_exp1_fig11.py  plot_exp1_fig12.py  plot_exp1_fig8.py  plot_exp1_fig9.py  plot_exp2_fig13-14.py  plot_exp3_fig15.py  plot_exp3_fig16.py
Experiments/project/plot-figure-simple/: plot_exp1_fig10.py  plot_exp1_fig11.py  plot_exp1_fig12.py  plot_exp1_fig8.py  plot_exp1_fig9.py  plot_exp2_fig13-14.py  plot_exp3_fig15.py  plot_exp3_fig16.py
Experiments/project/source-code/: exp1_fig10.cpp  exp1_fig11.cpp  exp1_fig12.cpp  exp1_fig8.cpp  exp1_fig9.cpp  exp2_fig13-14.cpp  exp3_fig15.cpp  exp3_fig16.cpp
Experiments/scripts/: run_exp1_full.sh  run_exp1_simple.sh  run_exp2_full.sh  run_exp2_simple.sh  run_exp3_full.sh  run_exp3_simple.sh
Tool/browser-interface/: run_interface.py
Tool/browser-interface/templates/: GeoVec-VE.html
Tool/execution-script/: run_tool.sh  stop_tool.sh
Tool/visual-engine/: CMakeLists.txt  visualEngine.cpp
